--- a/src/patternfly/components/Table/table-grid.scss
+++ b/src/patternfly/components/Table/table-grid.scss
@@ -38,19 +38,19 @@
   // ============================================================ //
 
   // Table
-  --#{$table}--responsive--BorderColor: var(--#{$pf-global}--BorderColor--300);
+  --#{$table}--responsive--BorderColor: var(--pf--global--border--color);
 
   // Body
-  --#{$table}__tbody--responsive--border-width--base: var(--#{$pf-global}--spacer--sm);
+  --#{$table}__tbody--responsive--border-width--base: var(--pf--global--border--width--regular--border--size);
   --#{$table}__tbody--after--border-width--base: var(--#{$pf-global}--BorderWidth--lg);
   --#{$table}__tbody--after--BorderLeftWidth: 0;
-  --#{$table}__tbody--after--BorderColor: var(--#{$pf-global}--active-color--100);
+  --#{$table}__tbody--after--BorderColor: var(--pf--global--border--color--active);
 
   // Row
-  --#{$table}__tr--responsive--border-width--base: var(--#{$pf-global}--spacer--sm);
+  --#{$table}__tr--responsive--border-width--base: var(--pf--global--border--width--regular--border--size);
   --#{$table}__tr--responsive--last-child--BorderBottomWidth: var(--#{$pf-global}--BorderWidth--sm);
   --#{$table}__tr--responsive--GridColumnGap: var(--#{$pf-global}--spacer--md);
-  --#{$table}__tr--responsive--MarginTop: var(--#{$pf-global}--spacer--sm);
+  --#{$table}__tr--responsive--MarginTop: var(--pf--global--border--width--regular--border--size);
   --#{$table}__tr--responsive--PaddingTop: var(--#{$pf-global}--spacer--md);
   --#{$table}__tr--responsive--PaddingRight: var(--#{$pf-global}--spacer--lg);
   --#{$table}__tr--responsive--xl--PaddingRight: var(--#{$pf-global}--spacer--md);
@@ -76,7 +76,7 @@
 
   // selected
   --#{$table}__tbody--m-selected--after__tr--BorderLeftWidth: var(--#{$table}__expandable-row--after--border-width--base);
-  --#{$table}__tbody--m-selected--after__tr--BorderLeftColor: var(--#{$pf-global}--active-color--100);
+  --#{$table}__tbody--m-selected--after__tr--BorderLeftColor: var(--pf--global--border--color--active);
 
   // Cell display
   --#{$table}--m-grid--cell--hidden-visible--Display: grid;
@@ -109,7 +109,7 @@
   --#{$table}__expandable-row-content--responsive--PaddingLeft: var(--#{$pf-global}--spacer--lg);
   --#{$table}__expandable-row-content--responsive--xl--PaddingRight: var(--#{$pf-global}--spacer--md);
   --#{$table}__expandable-row-content--responsive--xl--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$table}__expandable-row-content--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
+  --#{$table}__expandable-row-content--BackgroundColor: var(--pf--global--background--color--primary);
 
   @media screen and (max-width: $pf-v5-global--breakpoint--xl) {
     --#{$table}__expandable-row-content--responsive--PaddingRight: var(--#{$table}__expandable-row-content--responsive--xl--PaddingRight);
@@ -117,7 +117,7 @@
   }
 
   // Check
-  --#{$table}__check--responsive--MarginLeft: var(--#{$pf-global}--spacer--sm);
+  --#{$table}__check--responsive--MarginLeft: var(--pf--global--border--width--regular--border--size);
   --#{$table}__check--responsive--MarginTop: #{pf-size-prem(14px)};
 
   // Favorite
