--- a/src/patternfly/patternfly-tokens-dark.scss
+++ b/src/patternfly/patternfly-tokens-dark.scss
@@ -1,5 +1,5 @@
 /* stylelint-disable */
-:where(.pf--v5-theme--dark) {
+:where(.pf-v5-theme-dark) {
   --pf--global--action--plain--background-color:--hover--alt: var(--pf--global--color--base--gray-800);
   --pf--global--action--plain--background-color:--hover: var(--pf--global--color--base--gray-700);
   --pf--global--action--plain--background-color:: rgba(255, 255, 255, 0);
