chore(hack): update

--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -292,5 +292,5 @@
 }
 
 
-@import "../patternfly-tokens.scss";
-@import "../patternfly-tokens-dark.scss";
+@import "../patternfly-tokens";
+@import "../patternfly-tokens-dark";
