chore(hack): update

--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -291,5 +291,5 @@
   @include pf-v5-theme-dark-variables;
 }
 
-@import "../patternfly-tokens";
-@import "../patternfly-tokens-dark";
+// @import "../patternfly-tokens";
+// @import "../patternfly-tokens-dark";
