--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -5,12 +5,12 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 // stylelint-enable
 
 :root {
-  --#{$page}--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-300);
-  --#{$page}--inset: var(--#{$pf-global}--spacer--md);
-  --#{$page}--xl--inset: var(--#{$pf-global}--spacer--lg);
+  --#{$page}--BackgroundColor: var(—-pf--global—-background—-color-—secondary);
+  --#{$page}--inset: var(--pf--global--spacer--md);
+  --#{$page}--xl--inset: var(--pf--global--spacer--xl);
 
   // Header
-  --#{$page}__header--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-100);
+  --#{$page}__header--BackgroundColor: var(—-pf--global—-background—-color—-secondary);
   --#{$page}__header--ZIndex: var(--#{$pf-global}--ZIndex--md);
   --#{$page}__header--MinHeight: #{pf-size-prem(76px)}; // fixed height for header to ensure consistency across screen sizes.
 
@@ -77,7 +77,7 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   // Sidebar
   --#{$page}__sidebar--ZIndex: var(--#{$pf-global}--ZIndex--sm);
   --#{$page}__sidebar--Width: #{pf-size-prem(290px)};
-  --#{$page}__sidebar--BackgroundColor: var(--#{$pf-global}--BackgroundColor--dark-300);
+  --#{$page}__sidebar--BackgroundColor: var(—-pf--global-—background-—color—-secondary);
   --#{$page}__sidebar--m-light--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
   --#{$page}__sidebar--m-light--BorderRightWidth: var(--#{$pf-global}--BorderWidth--sm);
   --#{$page}__sidebar--m-light--BorderRightColor: var(--#{$pf-global}--BorderColor--100);
@@ -105,15 +105,15 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__main--ZIndex: var(--#{$pf-global}--ZIndex--xs);
 
   // Main section
-  --#{$page}__main-section--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-section--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-section--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-section--PaddingLeft: var(--#{$pf-global}--spacer--md);
+  --#{$page}__main-section--PaddingTop: var(-—pf--global—-spacer—-md);
+  --#{$page}__main-section--PaddingRight: var(-—pf--global—-spacer—-md);
+  --#{$page}__main-section--PaddingBottom: var(-—pf--global—-spacer—-md);
+  --#{$page}__main-section--PaddingLeft: var(-—pf--global—-spacer—-md);
   --#{$page}__main-section--xl--PaddingTop: var(--#{$pf-global}--spacer--lg);
   --#{$page}__main-section--xl--PaddingRight: var(--#{$pf-global}--spacer--lg);
   --#{$page}__main-section--xl--PaddingBottom: var(--#{$pf-global}--spacer--lg);
   --#{$page}__main-section--xl--PaddingLeft: var(--#{$pf-global}--spacer--lg);
-  --#{$page}__main-breadcrumb--main-section--PaddingTop: var(--#{$pf-global}--spacer--md);
+  --#{$page}__main-breadcrumb--main-section--PaddingTop: var(-—pf--global—-spacer—-md);
   --#{$page}__main-section--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-300);
   --#{$page}__main-section--m-light--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
   --#{$page}__main-section--m-light-100--BackgroundColor: var(--#{$pf-global}--BackgroundColor--150);
@@ -169,11 +169,11 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
 
   // Main section breadcrumb
-  --#{$page}__main-breadcrumb--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
-  --#{$page}__main-breadcrumb--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$page}__main-breadcrumb--PaddingRight: var(--#{$pf-global}--spacer--md);
+  --#{$page}__main-breadcrumb--BackgroundColor: var(—-pf--global—-background—-color-—primary);
+  --#{$page}__main-breadcrumb--PaddingTop: var(--pf-global--spacer--md);
+  --#{$page}__main-breadcrumb--PaddingRight: var(--pf-global--spacer--md);
   --#{$page}__main-breadcrumb--PaddingBottom: 0;
-  --#{$page}__main-breadcrumb--PaddingLeft: var(--#{$pf-global}--spacer--md);
+  --#{$page}__main-breadcrumb--PaddingLeft: var(--pf--global--spacer--md);
   --#{$page}__main-breadcrumb--m-sticky-top--PaddingBottom: var(--#{$pf-global}--spacer--md);
   --#{$page}__main-breadcrumb--xl--PaddingRight: var(--#{$pf-global}--spacer--lg);
   --#{$page}__main-breadcrumb--xl--PaddingLeft: var(--#{$pf-global}--spacer--lg);
@@ -183,7 +183,7 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__main-tabs--PaddingRight: 0;
   --#{$page}__main-tabs--PaddingBottom: 0;
   --#{$page}__main-tabs--PaddingLeft: 0;
-  --#{$page}__main-tabs--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
+  --#{$page}__main-tabs--BackgroundColor: var(—-pf--global—-background—-color-—primary);
 
   @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
     --#{$page}__main-breadcrumb--PaddingRight: var(--#{$page}__main-breadcrumb--xl--PaddingRight);
