--- a/src/patternfly/components/Content/content.scss
+++ b/src/patternfly/components/Content/content.scss
@@ -4,42 +4,42 @@
   // Body
   --#{$content}--MarginBottom: var(--#{$pf-global}--spacer--md);
   --#{$content}--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$content}--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$content}--FontWeight: var(--#{$pf-global}--FontWeight--normal);
+  --#{$content}--FontSize: var(--pf--global--font--body--font-size);
+  --#{$content}--FontWeight: var(--pf--global--font--body--font-weight);
 
   // this ensures color is not overridden
-  --#{$content}--Color: var(--#{$pf-global}--Color--100);
+  --#{$content}--Color: var(--pf--global--font--body--color);
 
   // Headings
-  --#{$content}--heading--FontFamily: var(--#{$pf-global}--FontFamily--heading);
+  --#{$content}--heading--FontFamily: var(--pf--global--font--heading--font-family);
 
   // h1
   --#{$content}--h1--MarginTop: var(--#{$pf-global}--spacer--lg);
   --#{$content}--h1--MarginBottom: var(--#{$pf-global}--spacer--sm);
   --#{$content}--h1--LineHeight: var(--#{$pf-global}--LineHeight--sm);
-  --#{$content}--h1--FontSize: var(--#{$pf-global}--FontSize--2xl);
-  --#{$content}--h1--FontWeight: var(--#{$pf-global}--FontWeight--normal);
+  --#{$content}--h1--FontSize: var(--pf--global--font--heading--xxl--fontsize);
+  --#{$content}--h1--FontWeight: var(--pf--global--font--heading--xxl--font-weight);
 
   // h2
   --#{$content}--h2--MarginTop: var(--#{$pf-global}--spacer--lg);
   --#{$content}--h2--MarginBottom: var(--#{$pf-global}--spacer--sm);
   --#{$content}--h2--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$content}--h2--FontSize: var(--#{$pf-global}--FontSize--xl);
-  --#{$content}--h2--FontWeight: var(--#{$pf-global}--FontWeight--normal);
+  --#{$content}--h2--FontSize: var(--pf--global--font--heading--xl--font-size);
+  --#{$content}--h2--FontWeight: var(--pf--global--font--heading--xl--font-weight);
 
   // h3
   --#{$content}--h3--MarginTop: var(--#{$pf-global}--spacer--lg);
   --#{$content}--h3--MarginBottom: var(--#{$pf-global}--spacer--sm);
   --#{$content}--h3--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$content}--h3--FontSize: var(--#{$pf-global}--FontSize--lg);
-  --#{$content}--h3--FontWeight: var(--#{$pf-global}--FontWeight--normal);
+  --#{$content}--h3--FontSize: var(--pf--global--font--heading--lg--font-size);
+  --#{$content}--h3--FontWeight: var(--pf--global--font--heading--lg--font-weight);
 
   // h4
   --#{$content}--h4--MarginTop: var(--#{$pf-global}--spacer--lg);
   --#{$content}--h4--MarginBottom: var(--#{$pf-global}--spacer--sm);
   --#{$content}--h4--LineHeight: var(--#{$pf-global}--LineHeight--md);
-  --#{$content}--h4--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$content}--h4--FontWeight: var(--#{$pf-global}--FontWeight--normal);
+  --#{$content}--h4--FontSize: var(--pf--global--font--heading--md--font-size);
+  --#{$content}--h4--FontWeight: var(--pf--global--font--heading--md--font-weight);
 
   // h5
   --#{$content}--h5--MarginTop: var(--#{$pf-global}--spacer--lg);
@@ -62,11 +62,11 @@
   --#{$content}--small--Color: var(--#{$pf-global}--Color--200);
 
   // Links
-  --#{$content}--a--Color: var(--#{$pf-global}--link--Color);
-  --#{$content}--a--TextDecoration: var(--#{$pf-global}--link--TextDecoration);
-  --#{$content}--a--hover--Color: var(--#{$pf-global}--link--Color--hover);
-  --#{$content}--a--hover--TextDecoration: var(--#{$pf-global}--link--TextDecoration--hover);
-  --#{$content}--a--visited--Color: var(--#{$pf-global}--link--Color--visited);
+  --#{$content}--a--Color: var(--pf--global--link--text--color);
+  --#{$content}--a--TextDecoration: var(—pf--global—-link—-text-decoration);
+  --#{$content}--a--hover--Color: var(--pf--global--link--text--color--hover);
+  --#{$content}--a--hover--TextDecoration: var(—pf--global—-link—-text-decoration--hover);
+  --#{$content}--a--visited--Color: var(--pf--global--link--text--color--visited);
 
   // Blockquote
   --#{$content}--blockquote--PaddingTop: var(--#{$pf-global}--spacer--md);
