--- a/src/patternfly/components/set-attribute.hbs
+++ b/src/patternfly/components/set-attribute.hbs
@@ -1,6 +1,6 @@
 {{!-- load default parameters here --}}
 
-{{loadParams 'component' @component-root 'defaultPrefixes' options}}
+{{!-- {{loadParams 'component' @component-root 'defaultPrefixes' options}}
 {{loadParams 'component' @component-root 'defaultAttributes' options}}
 
 {{#if set-attribute--form-attributes}}
@@ -13,4 +13,4 @@
 
 {{#if (getVar 'component-id' this)}}
   id="{{getVar 'component-id' this}}"
-{{/if}}
+{{/if}} --}}
