chore(hack): update

--- a/src/patternfly/base/_globals.scss
+++ b/src/patternfly/base/_globals.scss
@@ -1,4 +1,5 @@
 // Reset - based on minireset.css v0.0.3 | MIT License github.com/jgthms/minireset.css
+/* stylelint-disable */
 @if $pf-v5-global--enable-reset {
   :where(
     html,
