chore(hack): update

--- a/src/patternfly/components/Content/content.scss
+++ b/src/patternfly/components/Content/content.scss
@@ -1,4 +1,4 @@
-/* stylelint-disable */
+// stylelint-disable
 .#{$content} {
   // Body
   --#{$content}--MarginBottom: var(--#{$pf-global}--spacer--md);
