chore(hack): update

--- a/src/patternfly/base/tokens/palette-dark.scss
+++ b/src/patternfly/base/tokens/palette-dark.scss
@@ -1,4 +1,4 @@
-/* stylelint-disable */
+// stylelint-disable
 :root {
   // backgrounds
   --pf-global--background--color--100: var(--pf-color-black);
