--- a/src/patternfly/base/tokens/palette.scss
+++ b/src/patternfly/base/tokens/palette.scss
@@ -1,4 +1,4 @@
-/* stylelint-disable */
+// stylelint-disable
 :root {
   // background color
   --pf-global--background--color--100: var(--pf--color--white);
