--- a/src/patternfly/base/tokens/semantic-dark.scss
+++ b/src/patternfly/base/tokens/semantic-dark.scss
@@ -1,4 +1,4 @@
-/* stylelint-disable */
+// stylelint-disable
 :where(.pf--v5-theme--dark) {
   // backgrounds
   --pf--global--background--color--primary: var(--pf--global--BackgroundColor--200);
