--- a/src/patternfly/base/tokens/semantic.scss
+++ b/src/patternfly/base/tokens/semantic.scss
@@ -1,4 +1,4 @@
-/* stylelint-disable */
+// stylelint-disable
 :root {
   --pf--global--background--color--primary: var(--pf--global--background--color--100);
   --pf--global--background--color--primary--hover: var(--pf--global--background--color--200);
